# plusplus_platformer

./: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt  PlusPlusPlatformer.sln  PlusPlusPlatformer.vcxproj  QUICKSTART.md  README.md  build.bat  build.ps1  build_cl.bat  build_direct.bat  build_manual.bat  create_audio_placeholders.ps1  extract_assets.ps1  install_components.ps1  setup.ps1  vcpkg.json
assets/: level.txt
assets/levels/: level1.txt  level2.txt  level3.txt
include/: AchievementManager.h  AudioManager.h  Camera2D.h  Common.h  Enemy.h  Game.h  Level.h  ParticleSystem.h  Player.h  TileMap.h
src/: AchievementManager.cpp  Animation.cpp  Animation.h  Audio.cpp  Audio.h  AudioManager.cpp  Camera2D.cpp  Common.cpp  Common.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Input.cpp  Input.h  Level.cpp  ParticleSystem.cpp  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  TileMap.cpp  TileMap.h  main.cpp
